# vantage-cli

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config-example.ini  mkdocs.yml  pyproject.toml  setup.cfg
tests/: __init__.py  test_vantage_cli.py
tests/integration_tests/: conftest.py  test_smoke.py
vantage_cli/: __init__.py  cli.py  command.py  config.py  exceptions.py  file_util.py  printer.py  util.py  vantage.py
vantage_cli/commands/: account.py  api_keys.py  collections.py  delete.py  documents.py  search.py  upload.py  util.py  validate.py
